[package]
name = "logbook"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
authors = ["Jeff Bai"]
description = "A tiny CLI that gives every repo a single logbook.md for why-I-made-this-decision and what-I-rejected — the architectural context that's currently scattered across your head, half-written PR descriptions, and Slack threads."
license = "MIT"
repository = "https://github.com/jeffbai996/logbook"
homepage = "https://github.com/jeffbai996/logbook"
documentation = "https://docs.rs/logbook"
readme = "README.md"
keywords = ["cli", "decision-log", "markdown", "adr", "documentation"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
insta = "1.40"
proptest = "1.5"

[profile.release]
strip = true
lto = true
opt-level = "z"
